[package]
name = "aa-models"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
aa-consts = { git = "ssh://git@github.com/GT3CH1/aa-consts" }
regex = "1"
log = "0.4.14"